changes for backend services to handle registration
